<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/like_recipe"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:src="@drawable/ic_unlike"
        app:layout_constraintBottom_toTopOf="@+id/detail_name_title"
        app:layout_constraintEnd_toStartOf="@+id/detail_item_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detail_item_image"
        android:layout_width="166dp"
        android:layout_height="253dp"
        android:src="@drawable/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/share_btn"
        android:layout_width="113dp"
        android:layout_height="24dp"
        android:src="@drawable/fb_logo"
        app:layout_constraintBottom_toBottomOf="@+id/detail_item_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/add_recipe_name"
        android:textSize="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_item_image" />

    <TextView
        android:id="@+id/detail_name_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/recipe_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_name_title" />
    <TextView
        android:id="@+id/detail_cat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_margin"
        android:text="@string/recipe_categorie"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_name_subtitle" />

    <TextView
        android:id="@+id/detail_cat_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/duration_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_cat_title" />

    <TextView
        android:id="@+id/detail_full_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_margin"
        android:text="@string/add_duration_total"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_cat_subtitle" />

    <TextView
        android:id="@+id/detail_full_time_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/duration_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_full_time_title" />
    <TextView
        android:id="@+id/detail_difficulty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_margin"
        android:text="@string/add_difficulte"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_full_time_subtitle" />

    <TextView
        android:id="@+id/detail_difficulty_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/difficulte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_difficulty_title" />

    <TextView
        android:id="@+id/ing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_margin"
        android:text="@string/add_recipe_ingredient"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_difficulty_subtitle"/>

    <LinearLayout
        android:id="@+id/ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ing">


    </LinearLayout>
    <LinearLayout
        android:id="@+id/d_prep"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/add_duration_preparation"
        />
        <TextView
            android:id="@+id/duree_preration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/add_duration_preparation"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/d_cuis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_prep">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/add_duration_cuisson"
            />
        <TextView
            android:id="@+id/duree_cuisson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/add_duration_cuisson"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/prep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/default_margin"
        android:text="@string/add_recipe_preparation"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_cuis"/>

    <LinearLayout
        android:id="@+id/preparation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/prep"
        app:layout_constraintTop_toBottomOf="@+id/prep">


    </LinearLayout>

    <ImageView
        android:id="@+id/drop_recipe"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preparation" />

    <View
        android:id="@+id/sep"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/detail_name_title"
        app:layout_constraintStart_toEndOf="@+id/detail_name_title"
        app:layout_constraintTop_toTopOf="@+id/drop_recipe" />

    <ImageView
        android:id="@+id/modify_recipe"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_modify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sep"
        app:layout_constraintTop_toBottomOf="@+id/preparation" />


</androidx.constraintlayout.widget.ConstraintLayout>