<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <TextView
            android:id="@+id/textView_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/filter_categorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/categorie"
            app:layout_constraintEnd_toEndOf="@+id/all_recipe_filter_like_choose"
            app:layout_constraintStart_toEndOf="@+id/textView_filter"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/all_recipe_filter_like_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/filter_categorie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_categorie">

            <RadioButton
                android:id="@+id/filter_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <RadioButton
                android:id="@+id/filter_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_liked" />

            <RadioButton
                android:id="@+id/filter_unlike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_unliked" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_list"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_width="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="match_parent"/>


</LinearLayout>