<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="12dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/separation_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@id/separation_bar"
        app:layout_constraintStart_toEndOf="@+id/cardView_image"/>
    <TextView
        android:id="@+id/recipe_categorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_categorie"
        app:layout_constraintTop_toBottomOf="@id/separation_bar"
        app:layout_constraintStart_toStartOf="@+id/recipe_name"/>

    <TextView
        android:id="@+id/total_duration_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_duration_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recipe_categorie"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

</androidx.constraintlayout.widget.ConstraintLayout>